Fixes little css z-index bug

--- a/style/look.styl
+++ b/style/look.styl
@@ -116,6 +116,7 @@ footer
 	left 0px
 	text-align center
 	color c_base01
+	position relative
 	a
 		color c_base03
 
